--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-bootstrap": "^0.32.35",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "next": "14.1.0",
