--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-bootstrap": "^0.32.35",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.1",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
