--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
@@ -28,7 +29,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
